--- a/docs/css/overrides.css
+++ b/docs/css/overrides.css
@@ -1,3 +1,11 @@
 .md-content__inner p {
   text-align: justify;
 }
+
+.md-typeset h4 {
+  font-weight: 600;
+  letter-spacing: -.01em;
+  line-height: 1.5;
+  margin: 1.8em 0 0.7em;
+  font-size: 1rem;
+}
