--- a/docs/css/overrides.css
+++ b/docs/css/overrides.css
@@ -10,13 +10,13 @@
   font-size: 1rem;
 }
 
-.md-grid {
+/*.md-grid {
   max-width: 1440px;
 }
 
 .md-sidebar {
   width: 14.1rem;
-}
+}*/
 
 .md-header-nav__button.md-icon {
   margin-left: 1em;
