--- a/docs/css/overrides.css
+++ b/docs/css/overrides.css
@@ -44,25 +44,27 @@
     border-bottom-color: #02a6f2 !important;
   }
 
-  .md-typeset {
-    font-size:1.1rem !important;
-  }
-
   details {
     font-size: 1rem !important;
   }
 
+  code {
+    font-size: 1em !important;
+  }
+
   .md-typeset h1 {
-    font-size:2em !important;
+    font-size: 2em !important;
   }
   .md-typeset h2 {
-    font-size:1.5625em !important;
+    font-size: 1.5625em !important;
   }
   .md-typeset h3 {
-    font-size:1.25em !important;
+    font-size: 1.25em !important;
   }
 
   #doc-toc {
+    font-size: 1.1em !important;
+
     .twemoji {
       max-height: 1.125em;
     }
@@ -71,6 +73,27 @@
   .twemoji img {
     display: inline-block !important;
     vertical-align: middle !important;
+  }
+
+  .admonition {
+    code, td > code {
+      font-size: 1em !important;
+    }
+
+    table {
+      display: inline-block !important;
+      text-align: center !important;
+      margin: 0 auto !important;
+    }
+  }
+
+  ol > li {
+    font-size: 0.9em !important;
+    margin-left: 2em !important;
+  }
+
+  td > code {
+    font-size: 1.2em !important;
   }
 
 }
